syntax = "proto3"; //Specify proto3 version.

package serviceProvider; //Optional: unique package name.

//Service. define the methods that the grpc server can expose to the client.
service serviceProviderManagementService {
  rpc register       (RegisterRequest)        returns (RegisterResponse);
  rpc login          (LoginRequest)           returns (LoginResponse);
  rpc forgetPassword (ForgetPasswordRequest)  returns (SimpleResponse);
  rpc update         (UpdateRequest)          returns (SimpleResponse);
  rpc remove         (SimpleTokenBaseRequest) returns (SimpleResponse);
  rpc verify         (VerifyRequest)          returns (SimpleResponse);
  rpc resetPassword  (ResetPasswordRequest)   returns (SimpleResponse);
  rpc changePassword (ChangePasswordRequest)  returns (SimpleResponse);
  rpc getMe          (SimpleTokenBaseRequest) returns (getMeResponse);
  ///rpc getSuggestedSPs(LocationBaseRequset)    returns (SimpleResponse);
  
 // rpc setApplicant (User) returns (LegalAge);  TODO:   after making  serviceManagemnetService
  
}

message LocationBaseRequset{

  repeated int32 location = 1 [packed=true];

}

message SimpleResponse {
  int32  code    = 1;
  string message = 2;
  bool error     = 3;
}

message VerifyRequest{
  string id      = 1;
}

message SimpleTokenBaseRequest{
  string token = 1;
}

message ResetPasswordRequest{
  string token = 1;
  string new_password =2;
}

message RegisterRequest {
  string fullname        = 1 ;
  string email           = 2 ;
  string phonenumber     = 3 ;
  string username        = 4 ;
  string password        = 5 ;
  string degree          = 6 ;
  string nationalCode    = 7 ;
  bool   marrige         = 8 ;
  string address         = 9 ;
  int32  age             = 10; 
  string homePhonenumber = 11;
}

message RegisterResponse {
  int32  code        = 1;
  string message     = 2;
  string token       = 3;
  string status      = 4;
  bool error     = 5;
  
}

message LoginRequest {
  string username = 1;
  string password  = 2;
}

message LoginResponse {
  int32  code    = 1;
  string message = 2;
  string token   = 3;
  bool error     = 4;

}

message ForgetPasswordRequest{
  string email = 1;
}

message UpdateRequest {
  string fullname        = 1 ;
  string phonenumber     = 2 ;
  string username        = 3 ;
  string degree          = 4 ;
  string nationalCode    = 5 ;
  bool   marrige         = 6 ;
  string address         = 7 ;
  int32  age             = 8 ; 
  string homePhonenumber = 9 ;
  string token           = 10;
}

message ChangePasswordRequest {
  string oldpassword = 1;
  string newpassword = 2;
  string token       = 3;
}

message getMeResponse {
  string fullname        = 1 ;
  string email           = 2 ;
  string phonenumber     = 3 ;
  string username        = 4 ;
  string password        = 5 ;
  string degree          = 6 ;
  string nationalCode    = 7 ;
  bool   marrige         = 8 ;
  string address         = 9 ;
  int32  age             = 10; 
  string homePhonenumber = 11;
  string status          = 12;
  int32  code            = 13;
  string message         = 14;
  bool error     = 15;

}

// Message Type definition for LeaveFeedback response.